updated readme and fixed data being lot behind the nav bar

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   background-color: #183a37;
+  margin-top: 50px;
 }
 
 h1 {
